add osnovnoe zadanie